--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -36,6 +36,8 @@ $font_m-body: 12px;
 $m_padding: .3rem 1.5rem;
 $d_padding: .4rem 3rem;
 $p_border: 2px $black solid;
+//border
+$border: 4px $black solid;
 
 /*
  ** Default Variables (don't change anything here)
