--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1534,8 +1534,8 @@ object {
               color: #f5a623; }
           .blog .content-area .site-main .site-header .donate-btn a p {
             display: none; }
-    .blog .content-area .site-main article .image-position {
-      width: 445px;
+    .blog .content-area .site-main article .entry-header {
+      width: 100%;
       height: 321px;
       display: -ms-flexbox;
       display: flex;
@@ -1544,8 +1544,14 @@ object {
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
-          align-items: center; }
-      .blog .content-area .site-main article .image-position img {
+          align-items: center;
+      border: 4px #000000 solid transparent; }
+      .blog .content-area .site-main article .entry-header:hover, .blog .content-area .site-main article .entry-header:active, .blog .content-area .site-main article .entry-header:focus {
+        border: 4px #000000 solid; }
+      @media screen and (min-width: 480px) {
+        .blog .content-area .site-main article .entry-header {
+          width: 445px; } }
+      .blog .content-area .site-main article .entry-header .image-position img {
         min-height: 100%;
         max-height: 100%;
         width: auto;
@@ -1554,22 +1560,42 @@ object {
         top: 70%;
         transform: translate(-50%, -70%);
         max-width: none;
-        position: absolute; }
-    .blog .content-area .site-main article .entry-title {
-      background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
-      z-index: 1;
-      height: 100%;
-      width: 100%;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: center;
-          justify-content: center;
-      -ms-flex-align: center;
-          align-items: center;
-      text-decoration: none;
-      color: #000000; }
-      .blog .content-area .site-main article .entry-title:hover {
-        color: #f5a623; }
+        position: absolute;
+        z-index: -1; }
+      .blog .content-area .site-main article .entry-header .entry-title {
+        z-index: 1;
+        height: 100%;
+        width: 100%;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: center;
+            justify-content: center;
+        -ms-flex-align: center;
+            align-items: center;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap; }
+        .blog .content-area .site-main article .entry-header .entry-title a {
+          width: 100%;
+          height: 100%;
+          background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-pack: center;
+              justify-content: center;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-flow: column nowrap;
+              flex-flow: column nowrap;
+          color: #000000;
+          text-decoration: none; }
+          .blog .content-area .site-main article .entry-header .entry-title a:hover, .blog .content-area .site-main article .entry-header .entry-title a:active, .blog .content-area .site-main article .entry-header .entry-title a:focus {
+            color: #f5a623; }
+          .blog .content-area .site-main article .entry-header .entry-title a h2 {
+            font-size: 22px;
+            margin-bottom: 0; }
+        .blog .content-area .site-main article .entry-header .entry-title .entry-meta {
+          display: -ms-flexbox;
+          display: flex; }
 
 /*--------------------------------------------------------------
 # Archive-Gallery
