--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -37,6 +37,7 @@ $m_padding: .3rem 1.5rem;
 $d_padding: .4rem 3rem;
 $p_border: 2px $black solid;
 //border
+$border_transparent: 4px transparent solid;
 $border: 4px $black solid;
 
 /*
