--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1483,7 +1483,11 @@ object {
       position: relative;
       background: #f5a623;
       width: 100%;
+      min-height: 118px;
       color: #000000; }
+      @media screen and (min-width: 480px) {
+        .blog .content-area .site-main .site-header {
+          min-height: 160px; } }
       .blog .content-area .site-main .site-header .donate-btn {
         background-color: #F91E72;
         position: absolute;
@@ -1619,7 +1623,8 @@ object {
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+      margin-bottom: 32px; }
       .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header {
         display: -ms-flexbox;
         display: flex;
@@ -1630,7 +1635,11 @@ object {
         position: relative;
         background: #f5a623;
         width: 100%;
+        min-height: 118px;
         color: #000000; }
+        @media screen and (min-width: 480px) {
+          .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header {
+            min-height: 160px; } }
         .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header .donate-btn {
           background-color: #F91E72;
           position: absolute;
@@ -1657,6 +1666,64 @@ object {
               display: none; }
         .post-type-archive-gallery .content-area .site-main .featured-gallery-section .page-header .entry-meta {
           display: none; }
+      .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+        -ms-flex-align: center;
+            align-items: center;
+        width: 100%; }
+        .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery {
+          width: 100%;
+          height: 320px;
+          margin: 0;
+          margin-top: 32px;
+          border: 4px transparent solid; }
+          .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery:hover, .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery:active, .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery:focus {
+            border: 4px #000000 solid; }
+          .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery .entry-header {
+            width: 100%;
+            height: 100%;
+            display: -ms-flexbox;
+            display: flex;
+            position: relative;
+            overflow: hidden;
+            -ms-flex-pack: center;
+                justify-content: center;
+            -ms-flex-align: center;
+                align-items: center; }
+            .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery .entry-header .image-position {
+              height: 100%; }
+              .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery .entry-header .image-position img {
+                min-height: 100%;
+                max-height: 100%;
+                width: auto;
+                min-width: 100%;
+                left: 50%;
+                top: 70%;
+                transform: translate(-50%, -70%);
+                max-width: none;
+                position: absolute; }
+            .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery .entry-header .entry-title {
+              background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
+              z-index: 1;
+              height: 100%;
+              width: 100%;
+              display: -ms-flexbox;
+              display: flex;
+              -ms-flex-pack: center;
+                  justify-content: center;
+              -ms-flex-align: center;
+                  align-items: center;
+              text-decoration: none;
+              color: #000000; }
+              .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery .entry-header .entry-title:hover {
+                color: #f5a623; }
+              .post-type-archive-gallery .content-area .site-main .featured-gallery-section .gallery-album .gallery .entry-header .entry-title h2 {
+                font-size: 22px; }
     .post-type-archive-gallery .content-area .site-main .lastest-gallery-section {
       display: -ms-flexbox;
       display: flex;
@@ -1676,7 +1743,11 @@ object {
         position: relative;
         background: #f5a623;
         width: 100%;
+        min-height: 118px;
         color: #000000; }
+        @media screen and (min-width: 480px) {
+          .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .page-header {
+            min-height: 160px; } }
         .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .page-header .donate-btn {
           background-color: #F91E72;
           position: absolute;
@@ -1713,10 +1784,16 @@ object {
         -ms-flex-align: center;
             align-items: center; }
         .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .gallery {
-          width: 463px;
+          width: 100%;
           height: 321px;
           margin: 0;
-          margin-top: 32px; }
+          margin-top: 32px;
+          border: 4px transparent solid; }
+          .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .gallery:hover, .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .gallery:active, .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .gallery:focus {
+            border: 4px #000000 solid; }
+          @media screen and (min-width: 480px) {
+            .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .gallery {
+              width: 463px; } }
           .post-type-archive-gallery .content-area .site-main .lastest-gallery-section .gallery-album .gallery .entry-header {
             width: 100%;
             height: 100%;
@@ -1785,7 +1862,11 @@ object {
         position: relative;
         background: #f5a623;
         width: 100%;
+        min-height: 118px;
         color: #000000; }
+        @media screen and (min-width: 480px) {
+          .single-gallery .content-area .site-main article .entry-header {
+            min-height: 160px; } }
         .single-gallery .content-area .site-main article .entry-header .donate-btn {
           background-color: #F91E72;
           position: absolute;
